# docx-jats

./: .dockerignore  .env.example  .gitignore  Makefile  README.md  dev.ps1  docker-compose.prod.yml  docker-compose.yml
.github/workflows/: ci-cd.yml
backend/: .env.example  Cargo.toml  Dockerfile
backend/src/: error.rs  lib.rs  main.rs
backend/src/api/: handlers.rs  routes.rs
backend/src/extractor/: abstract_.rs  authors.rs  mod.rs  references.rs  sections.rs  title.rs
backend/src/models/: mod.rs
backend/src/parser/: mod.rs  raw_xml.rs  zip.rs
backend/src/validation/: mod.rs  wellformed.rs
backend/src/xml/: generator.rs
backend/static/: swagger_ui.html
backend/tests/fixtures/: article_bibliography_alias.docx  article_full_research.docx  article_no_references.docx  article_review_paper.docx  generate_fixtures.py
backend/tests/integration/: convert_api_test.rs  fixture_tests.rs  main.rs
frontend/: .env.example  Dockerfile  package-lock.json  package.json  tsconfig.json  vite.config.ts
frontend/src/: app.css  app.html
frontend/src/lib/: api-contract.ts  api.ts  types.ts
frontend/src/lib/components/: EditPanel.svelte
frontend/src/routes/: +layout.svelte  +page.svelte
nginx/: nginx.conf
tests/bruno/: bruno.json  convert-bad-file.bru  convert-no-file.bru  convert-success.bru  health.bru
tests/bruno/environments/: dev.bru
tests/fixtures/: generate_test_docx.py  journalstack_test_article.docx  not-a-docx.txt
