[package]
name = "docx-jats-backend"
version = "0.1.0"
edition = "2021"

[lib]
name = "docx_jats_backend"
path = "src/lib.rs"

[[bin]]
name = "docx-jats-backend"
path = "src/main.rs"

[dependencies]
axum = { version = "0.8.9", features = ["multipart"] }
tokio = { version = "1", features = ["full"] }
tower-http = { version = "0.6.10", features = ["cors", "trace"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
quick-xml = { version = "0.40.0", features = ["serialize"] }
zip = "8.6.0"
bytes = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
thiserror = "2.0.18"

[dev-dependencies]
axum-test = "20.0.0"
tokio = { version = "1", features = ["full"] }
